--- a/lesson2/styles/base.css
+++ b/lesson2/styles/base.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu&display=swap');
 main {
-    max-width: 767px;
+    max-width: 100%;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
@@ -52,4 +52,8 @@ footer{
     border-style: groove;
     border-color: black;
     background-color: grey;
+}
+
+img {
+    width: 100%
 }
