--- a/styles/medium.css
+++ b/styles/medium.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arimo&family=Grechen+Fuemen&family=Permanent+Marker&family=Roboto:wght@100&family=Vujahday+Script&display=swap');
 @media only screen and (min-width: 32.5em) {
     header,
     footer {
