--- a/lesson2/styles/base.css
+++ b/lesson2/styles/base.css
@@ -10,10 +10,12 @@ main {
 }
 
 header {
-    background-color: grey;
+    background-color: #F5FBDF;
+    color: #003F47;
     text-align: center;
     border-style: inset;
     border-color: black;
+    margin-bottom: 1rem;
 
 }
 
@@ -22,6 +24,7 @@ h1 {
     margin: 0;
     font-weight: 400;
     font-family: 'Inconsolata', monospace;
+    padding-top : 2rem;
 }
 
 h2, h3{
@@ -29,8 +32,11 @@ h2, h3{
     margin: 0;
     font-weight: 400;
     font-family: 'Inconsolata', monospace;
-    color: black;
-    background-color: gray;
+    color: #003F47;
+    background-color: #F5FBDF;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 p {
@@ -43,7 +49,8 @@ section {
     border-color: black;
     max-width: fit-content;
     color: brown;
-    background-color: grey;
+    background-color: #F5FBDF;
+    margin: 1rem;
 }
 
 footer{
@@ -51,9 +58,11 @@ footer{
     color: orange;
     border-style: groove;
     border-color: black;
-    background-color: grey;
+    background-color: #F5FBDF;
+    margin-top: 1rem;
 }
 
 img {
-    width: 100%
+    width: 100%;
+    padding-top: 2rem;
 }
