--- a/styles/medium.css
+++ b/styles/medium.css
@@ -10,7 +10,7 @@
     header{
         display: flex;
         align-items: center;
-        justify-content: space-around
+        justify-content: center;
     }
 
     header img{
