--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu&display=swap');
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 63em) {
 	main {
-		grid-template-columns: 1fr 1fr 1fr;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-template-rows: 1fr 1fr 1fr;
+		margin-top: 5%;
+		margin-bottom: 5%;
+		column-gap: .05%;
+		max-height: auto;
 	}
 	
-	/* This is unncessary !!! The flow is set and the template is set already */
+	/* This is unncessary !!! The flow is set and the template is set already 
 	main section:nth-child(1) {
 	  grid-column: 1/2;
   }
@@ -12,10 +18,77 @@
 	  grid-column: 2/3;
 		grid-row: 1/2;
   }
-	/*************************************/
+	/*************************************
 
 	main section:nth-child(3) {
 		grid-column: span 1;
+	}*/
+	#herodiv{
+		width:100%;
+
+	}
+	#hero-img{
+		width:100%;
+	}
+	#spotlights-div{
+		display:flex;
+		flex-wrap: wrap;
+		width: 100%;
+		height: 100%;
+		grid-column: 4/-1;
+		grid-row: 1/-1;
+		margin: 0 0 0 0;
+		padding: 0 0 0 0;
+	}
+	.spotlights{
+		height: 25%;
+		width:100%;
+	}
+
+	section{
+		max-height: 100%;
+		max-width: 100%;
+	}
+	/*Hero******/
+	section:nth-child(1){
+		width: 100%;
+		grid-column: 2/4;
+		grid-row:1/3;
+		margin-top:0;
+	}
+
+	/*Call to action*****/
+	section:nth-child(2) {
+		width: 100%;
+		grid-column: 1/2;
+		grid-row: 1/2;
+	}
+	/*news********/
+	section:nth-child(3) {
+		width: 100%;
+		padding: 0;
+		grid-column: 2/4;
+	}
+	/*events*******/
+	section:nth-child(4) {
+		width: 100%;
+		padding: 0;
+		grid-column: 2/4;
+	}
+	/*Spotlight(s)**/
+	section:nth-child(5){
+		width:100%;
+		padding:0;
+		display:flex;
+		align-items: center;
+		height:100%;
+		grid-row:1/1;
+	}
+	/*join***/
+	section:nth-child(6){
+		display:block;
+		width:100%;
+		grid-row:2/3;
+		grid-column: 1/2;
 	}
 }
-llll
