--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu&display=swap');
-@media only screen and (min-width: 37.5em) {
+@media only screen and (min-width: 28.5em) {
 	main {
+		display:grid;
 		grid-template-columns: 1fr 1fr;
+		width: 100%;
+		gap: 1em;
 	}
 
 	main section:nth-child(2) {
@@ -28,9 +31,11 @@
 		display: flex;
 		margin: left 2vw;
 	}
+
+	#
 	
 	nav ul li a{
 		border: none;
 	}
-llll
+
 }
