--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -176,6 +176,9 @@ main h2,h3,h4 {
     max-height: 100;
     align-items: center;
 }
+.herodiv>img{
+    width: 100%;
+}
 
 .hero-img{
     margin: 10px auto;
@@ -188,7 +191,7 @@ main h2,h3,h4 {
 .weathersummary{
     position:absolute;
     top: 50px;
-    left: 700px;
+    left: 50px;
 
 }
 
