--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -41,7 +41,13 @@
 		padding: 0 0 0 0;
 	}
 	.spotlights{
-		height: 25%;
+		height: 33%;
+		width:100%;
+	}
+
+	#spotlights-section{
+		display:flex;
+		height:100%;
 		width:100%;
 	}
 
@@ -53,42 +59,48 @@
 	section:nth-child(1){
 		width: 100%;
 		grid-column: 2/4;
-		grid-row:1/3;
+		grid-row:1/2;
 		margin-top:0;
 	}
 
-	/*Call to action*****/
+	/*events*****/
 	section:nth-child(2) {
 		width: 100%;
 		grid-column: 1/2;
 		grid-row: 1/2;
+		padding:0;
 	}
-	/*news********/
+	/*weather********/
 	section:nth-child(3) {
 		width: 100%;
-		padding: 0;
-		grid-column: 2/4;
+		grid-row: 2/3;
+		grid-column:1/2;
+		padding:1px;
+		
 	}
-	/*events*******/
+	/*news*******/
 	section:nth-child(4) {
 		width: 100%;
 		padding: 0;
 		grid-column: 2/4;
+		padding:1px;
 	}
-	/*Spotlight(s)**/
+
+	/*spotlights***/
 	section:nth-child(5){
-		width:100%;
-		padding:0;
 		display:flex;
-		align-items: center;
-		height:100%;
-		grid-row:1/1;
+		align-items:center;
+		justify-content: space-evenly;
+		width: 100%;
+		height: 100%;
+		grid-row: 1/-1;
 	}
-	/*join***/
+	/*join**/
 	section:nth-child(6){
 		display:block;
 		width:100%;
-		grid-row:2/3;
-		grid-column: 1/2;
+		grid-row:3/4;
+		grid-column:1/2;
 	}
+
 }
