--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu&display=swap');
-@media only screen and (min-width: 28.5em) {
+@media only screen and (min-width: 50em) {
 	main {
 		display:grid;
 		grid-template-columns: 1fr 1fr;
@@ -32,10 +32,67 @@
 		margin: left 2vw;
 	}
 
-	#
+	
 	
 	nav ul li a{
 		border: none;
 	}
+	#hero-img{
+		width: 640vw;
+	}
+
+	/*Hero******/
+	section:nth-child(1){
+		width: 100%;
+		height:max-content;
+		grid-column: 2/4;
+		grid-row:1/2;
+		margin-top:0;
+	}
+
+	/*events*****/
+	section:nth-child(2) {
+		width: 100%;
+		height:max-content;
+		grid-column: 1/2;
+		grid-row: 1/2;
+		padding:0;
+	}
+	/*weather********/
+	section:nth-child(3) {
+		width: 95%;
+		height: max-content;
+		grid-row: 2/3;
+		grid-column:1/2;
+		
+		
+	}
+	/*news*******/
+	section:nth-child(4) {
+		width: 100%;
+		padding: 0;
+		grid-column: 2/4;
+		padding:1px;
+	}
+
+	/*spotlights***/
+	section:nth-child(5){
+		display:flex;
+		align-items:center;
+		justify-content: space-evenly;
+		width: 100%;
+		height: 100%;
+		grid-row: 1/-1;
+	}
+	/*join**/
+	section:nth-child(6){
+		display:block;
+		width:100%;
+		grid-row:3/4;
+		grid-column:1/2;
+	}
+
+
+
 
 }
