--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -191,15 +191,16 @@ main h2,h3,h4 {
 section {
     border-style: double;
     border-color: var(--pop-color);
-    max-width: fit-content;
+    /* max-width: fit-content; */
+    width: 100%;
     color: var(--primary-fg);
     background-color: #F5FBDF;
     margin: 1rem;
-    display:block;
+    display: block;
     
 }
 
-.weatherdiv>img{
+.weathersection{
     width:100%;    
 }
 
@@ -210,9 +211,14 @@ section {
 #spotlights-div{
     width:100%;
 }
-
+#events{
+    width:50%;
+}
 /* Footer stuff */
-
+#newshere {
+    width: 100%;
+    height: 90%;
+}
 footer{
     background-color: var(--primary-bg);
     color: var(--primary-fg);
@@ -224,3 +230,22 @@ footer{
     border-color:var(--secondary-bg);
 }
 
+/* Brian did this */
+#clouds {
+    width: 100%;
+}
+/*
+.weathersection {
+    width: 100%;
+} */
+section { /* Use padding to space stuff out.*/
+    margin: 0;
+}
+.weathersection {
+    grid-template-columns: 1/2;
+    grid-template-rows: 2/3;
+    width: 100%;
+}
+#weather-section {
+    width: 100%;
+}
