--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,19 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu&display=swap');
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 37.5em) {
 	main {
 		display:grid;
 		grid-template-columns: 1fr 1fr;
 		width: 100%;
 		gap: 1em;
 	}
-
+	/*
 	main section:nth-child(2) {
 		display: block;
 	}
 
 	main section:nth-child(3) {
-		grid-column: span 2;
-	}
+		/*grid-column: span 2; */ /*Brian 
+	}*/
 
 	main section picture {
 		display: block;
@@ -42,57 +41,59 @@
 	}
 
 	/*Hero******/
-	section:nth-child(1){
+	/* main > section:nth-child(1)  */
+	#herooo {
 		width: 100%;
 		height:max-content;
-		grid-column: 2/4;
-		grid-row:1/2;
-		margin-top:0;
+		/* grid-column: 2/4; */
+		grid-column: 1/2;
+		grid-row: 1/2;
+		margin-top: 0;
+		border: 3px solid red;
 	}
 
 	/*events*****/
-	section:nth-child(2) {
+	/* main > section:nth-child(2) */
+	#whatshappening {
 		width: 100%;
-		height:max-content;
-		grid-column: 1/2;
-		grid-row: 1/2;
-		padding:0;
+		
+		grid-column: 2/3;
+		grid-row: 2/3;
+		padding: 0;
 	}
 	/*weather********/
-	section:nth-child(3) {
+	main > #weather-section{
 		width: 95%;
 		height: max-content;
 		grid-row: 2/3;
-		grid-column:1/2;
-		
+		grid-column: 1/2;
 		
 	}
 	/*news*******/
-	section:nth-child(4) {
+	#hotoffthepress{
 		width: 100%;
 		padding: 0;
-		grid-column: 2/4;
+		grid-column: 1/2;
+		grid-row: 3/4;
 		padding:1px;
 	}
 
 	/*spotlights***/
-	section:nth-child(5){
+	#spotlights-section{
 		display:flex;
 		align-items:center;
 		justify-content: space-evenly;
 		width: 100%;
 		height: 100%;
-		grid-row: 1/-1;
+		grid-column: 2/3;
+		grid-row: 1/2;
 	}
 	/*join**/
-	section:nth-child(6){
+	#wantin{
 		display:block;
 		width:100%;
 		grid-row:3/4;
-		grid-column:1/2;
+		grid-column:2/3;
 	}
-
-
-
-
+	/* Hero weather new col1 spot events join col2*/
 }
