--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -60,11 +60,15 @@ header h1{
     margin-bottom: 0px;
 }
 
-
-
 header div{
     align-self:center;
     text-align: center;
+}
+
+header #banner{
+    align-self:center;
+    text-align: center;
+    width: auto;
 }
 
 nav{
@@ -172,15 +176,16 @@ main h2,h3,h4 {
     margin: 10px auto;
     position: relative;
     border: 1px;
-    max-width: 200;
-    max-height: 100;
+    width: auto;
     align-items: center;
 }
-.herodiv>img{
-    width: 100%;
+.herodiv>picture{
+    width: auto;
 }
-
-.hero-img{
+#herooo{
+    width:auto;
+}
+.hero-picture{
     margin: 10px auto;
     position: relative;
     border: 1px;
@@ -188,9 +193,9 @@ main h2,h3,h4 {
     max-height: 250px;
 }
 
-section {
-    border-style: double;
-    border-color: var(--pop-color);
+div {
+    /*border-style: double;
+    /*border-color: var(--pop-color);*/
     /* max-width: fit-content; */
     width: 100%;
     color: var(--primary-fg);
@@ -200,7 +205,7 @@ section {
     
 }
 
-.weathersection{
+.weatherdiv{
     width:100%;    
 }
 
@@ -214,11 +219,17 @@ section {
 #events{
     width:50%;
 }
-/* Footer stuff */
+
 #newshere {
     width: 100%;
     height: 90%;
 }
+
+#whatshappening {
+    width: 100%;
+}
+/* Footer stuff */
+
 footer{
     background-color: var(--primary-bg);
     color: var(--primary-fg);
@@ -238,14 +249,15 @@ footer{
 .weathersection {
     width: 100%;
 } */
-section { /* Use padding to space stuff out.*/
+div { /* Use padding to space stuff out.*/
     margin: 0;
 }
-.weathersection {
+.weatherdiv {
     grid-template-columns: 1/2;
     grid-template-rows: 2/3;
     width: 100%;
 }
-#weather-section {
+#weather-div {
     width: 100%;
 }
+
