--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,12 +1,13 @@
-@media only screen and (min-width: 80em) {
+@media only screen and (min-width: 770px) {
 	main {
 		display: grid;
-		grid-template-columns: 1fr 1fr 1fr 1fr;
-		grid-template-rows: 1fr 1fr 1fr;
+		grid-template-columns: auto auto auto auto;
+		grid-template-rows: auto auto auto;
 		margin-top: 5%;
 		margin-bottom: 5%;
 		column-gap: .05%;
 		max-height: auto;
+		width:auto;
 	}
 	
 	/* This is unncessary !!! The flow is set and the template is set already 
@@ -53,7 +54,7 @@
 		width:100%;
 	}
 
-	section{
+	div{
 		max-height: 100%;
 		max-width: 100%;
 	}
@@ -68,14 +69,14 @@
 
 	/*events*****/
 	#whatshappening{
-		width: 100%;
+		width: 50;
 		height:max-content;
-		grid-column: 1/2;
-		grid-row: 1/2;
+		grid-column: 1/1;
+		grid-row: 1/3;
 		padding:0;
 	}
 	/*weather********/
-	#weather-section{
+	#weather-div{
 		width: 95%;
 		/*height: max-content;*/
 		grid-row: 2/3;
@@ -98,7 +99,9 @@
 		justify-content: space-evenly;
 		width: 100%;
 		height: 100%;
+		grid-column: 3/3;
 		grid-row: 1/-1;
+		z-index: -4;
 	}
 	/*join**/
 	#wantin{
@@ -107,7 +110,7 @@
 		grid-row:3/4;
 		grid-column:1/2;
 	}
-	/* Brian */
+	/* Brian
 	main {
 		display: grid;
 		grid-template-columns: auto auto auto auto;
@@ -116,12 +119,19 @@
 		margin-bottom: 5%;
 		column-gap: .05%;
 		max-height: auto;
-	}
-	.weathersection {
+	}*/
+	.weatherdiv{
 		grid-template-columns: 1/2;
 		grid-template-rows: 2/3;
 		width: 100%;
 		
+	}
+	/*discover*/
+
+	#discover{
+		display:flex;
+		flex-direction:column;
+		text-align:center;
 	}
 }
 
