--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -49,11 +49,6 @@
 		width:100%;
 	}
 
-	#spotlights-section{
-		height:100%;
-		width:100%;
-	}
-
 	div{
 		max-height: 100%;
 		max-width: 100%;
@@ -61,7 +56,6 @@
 	/*Hero******/
 	#herooo{
 		width: 100%;
-		height:max-content;
 		grid-column: 2/4;
 		grid-row:1/2;
 		margin-top:0;
@@ -70,9 +64,9 @@
 	/*events*****/
 	#whatshappening{
 		width: 50;
-		height:max-content;
+		height: max-content;
 		grid-column: 1/1;
-		grid-row: 1/3;
+		grid-row: 1/4;
 		padding:0;
 	}
 	/*weather********/
@@ -89,20 +83,25 @@
 		width: 100%;
 		padding: 0;
 		grid-column: 2/4;
+		grid-row:2/4;
 		padding:1px;
 	}
 
 	/*spotlights***/
-	#spotlights-section{
+	#spotlights-div{
 		display:flex;
-		align-items:center;
-		justify-content: space-evenly;
+		align-items:flex-start;
+		align-content: space-evenly;
 		width: 100%;
 		height: 100%;
-		grid-column: 3/3;
-		grid-row: 1/-1;
-		z-index: -4;
+		grid-column: 4/5;
+		grid-row: 4/1;
+		
 	}
+	#spotlights{
+		margin:1rem;
+	}
+
 	/*join**/
 	#wantin{
 		display:block;
@@ -129,9 +128,9 @@
 	/*discover*/
 
 	#discover{
-		display:flex;
-		flex-direction:column;
-		text-align:center;
-	}
+		display: flex;
+		flex-direction: column;
+	} 
+
 }
 
