--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -2,6 +2,7 @@
 	main {
 		display:grid;
 		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr 1fr 1fr 1fr;
 		width: 100%;
 		gap: 1em;
 	}
@@ -56,24 +57,24 @@
 	/* main > section:nth-child(2) */
 	#whatshappening {
 		width: 100%;
-		grid-column: 2/3;
-		grid-row: 2/3;
+		grid-column: 1/2;
+		grid-row: 2/5;
 		padding: 0;
 	}
 	/*weather********/
 	main > #weather-div{
 		width: 95%;
 		height: max-content;
-		grid-row: 2/3;
+		grid-row: 3/5;
 		grid-column: 1/2;
 		
 	}
 	/*news*******/
 	#hotoffthepress{
-		width: 100%;
+		width: 95%;
 		padding: 0;
-		grid-column: 1/2;
-		grid-row: 3/4;
+		grid-column: 1/3;
+		grid-row: 4/5;
 		padding:1px;
 	}
 
@@ -85,7 +86,7 @@
 		width: 100%;
 		height: 100%;
 		grid-column: 2/2;
-		grid-row: 1/2;
+		grid-row: 1/5;
 	}
 	/*join**/
 	#wantin{
