--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,11 +1,11 @@
-@media only screen and (min-width: 770px) {
+@media only screen and (min-width: 1024px) {
 	main {
 		display: grid;
 		grid-template-columns: auto auto auto auto;
 		grid-template-rows: auto auto auto;
 		margin-top: 5%;
-		margin-bottom: 5%;
-		column-gap: .05%;
+		margin-bottom: 5%; 
+		/* column-gap: .05%; */
 		max-height: auto;
 		width:auto;
 	}
@@ -26,6 +26,8 @@
 	#herodiv{
 		width:100%;
 		height:auto;
+		grid-column: 2/4;
+		grid-row: 1/3;
 
 	}
 	#hero-img{
@@ -44,8 +46,9 @@
 	}*/
 	.spotlights{
 		display: flex;
-		flex-wrap: wrap;
-		height: 33%;
+		/*flex-wrap: wrap; */
+		flex-direction: column;
+		/*height: 33%; */
 		width:100%;
 	}
 
@@ -60,7 +63,7 @@
 		grid-row:1/2;
 		margin-top:0;
 	}
-
+	
 	/*events*****/
 	#whatshappening{
 		width: 50;
@@ -73,15 +76,20 @@
 	#weather-div{
 		width: 95%;
 		/*height: max-content;*/
-		grid-row: 2/3;
+		grid-row: 1/3;
 		grid-column:1/2;
 		
-		
 	}
+
+	#weather-div{
+		grid-template-columns: 1/2;
+		grid-template-rows: 2/3;
+		width: 100%;
+	}
+
 	/*news*******/
 	#hotoffthepress{
 		width: 100%;
-		padding: 0;
 		grid-column: 2/4;
 		grid-row:2/4;
 		padding:1px;
@@ -95,7 +103,7 @@
 		width: 100%;
 		height: 100%;
 		grid-column: 4/5;
-		grid-row: 4/1;
+		grid-row: 1/4;
 		
 	}
 	#spotlights{
@@ -106,7 +114,7 @@
 	#wantin{
 		display:block;
 		width:100%;
-		grid-row:3/4;
+		grid-row:2/3;
 		grid-column:1/2;
 	}
 	/* Brian
@@ -119,10 +127,7 @@
 		column-gap: .05%;
 		max-height: auto;
 	}*/
-	.weatherdiv{
-		grid-template-columns: 1/2;
-		grid-template-rows: 2/3;
-		width: 100%;
+
 		
 	}
 	/*discover*/
@@ -131,6 +136,4 @@
 		display: flex;
 		flex-direction: column;
 	} 
-
-}
 
