--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,10 +1,10 @@
-@media only screen and (min-width: 450px) {
+@media only screen and (min-width: 600px) {
 	main {
 		display:grid;
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 1fr 1fr 1fr 1fr;
+		grid-template-rows: auto auto auto auto;
 		width: 100%;
-		gap: 1em;
+		gap: 3em;
 	}
 	/*
 	main section:nth-child(2) {
@@ -47,7 +47,7 @@
 		width: 100%;
 		height:max-content;
 		/* grid-column: 2/4; */
-		grid-column: 1/2;
+		grid-column: 1/3;
 		grid-row: 1/2;
 		margin-top: 0;
 		border: 3px solid red;
@@ -57,12 +57,13 @@
 	/* main > section:nth-child(2) */
 	#whatshappening {
 		width: 100%;
+		height: auto;
 		grid-column: 1/2;
-		grid-row: 2/5;
+		grid-row: 2/3;
 		padding: 0;
 	}
 	/*weather********/
-	main > #weather-div{
+	main > #weather-div {
 		width: 95%;
 		height: max-content;
 		grid-row: 3/5;
@@ -70,30 +71,32 @@
 		
 	}
 	/*news*******/
-	#hotoffthepress{
+	#hotoffthepress {
 		width: 95%;
 		padding: 0;
 		grid-column: 1/3;
-		grid-row: 4/5;
+		grid-row: 6/7;
 		padding:1px;
 	}
 
 	/*spotlights***/
-	#spotlights-section{
+	#spotlights-div {
 		display:flex;
 		align-items:center;
 		justify-content: space-evenly;
 		width: 100%;
 		height: 100%;
 		grid-column: 2/2;
-		grid-row: 1/5;
+		grid-row: 2/6;
 	}
 	/*join**/
 	#wantin{
 		display:block;
 		width:100%;
-		grid-row:3/4;
-		grid-column:2/3;
+		grid-row:1/2;
+		grid-column:1/3;
+		z-index: 5;
+		background-color: unset;
 	}
 	/* Hero weather new col1 spot events join col2*/
 
