--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -302,3 +302,58 @@ footer{
     
 }
 
+form fieldset{
+    margin:2rem 0;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: .5rem 2%;
+}
+form legend{
+    color: black;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+
+}
+
+form label.top, form div{
+    display:block;
+    padding-top: 1rem;
+    color: black;
+    font-size:.9rem;
+}
+
+form label.top input, form label.top select{
+    /*display: block;*/
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding:.75px;
+    color: var(--primary-fg);
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0,0,0,0.1)
+}
+
+form label.sbs{
+    display: block;
+    padding: .75rem 0;
+    color: black;
+    text-align: center;
+}
+form input.submitBtn{
+    border: none;
+    background-color: gold;
+    border-radius:1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+}
+
+form label.top input:required{
+    border-left: red solid 6px;
+}
+
+form label.top input:required:valid{
+    border-left: green solid 6px;
+}
