--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -140,3 +140,11 @@
 	#discover:hover{
 		background-color: rgba(103, 120, 199, 0.5);
 	}
+
+	table{
+		grid-column: 3/4;
+		grid-row: 1/3;
+	}
+	form{
+		grid-row: 1/4;
+	}
