--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -65,11 +65,11 @@
 	
 	/*events*****/
 	#whatshappening{
-		width: 50%;
+		width: 350%;
 		height: max-content;
 		grid-column: 1/1;
 		grid-row: 1/4;
-		padding:0;
+		padding:2px;
 	}
 	/*weather********/
 	#weather-div{
@@ -81,8 +81,8 @@
 	}
 
 	#weather-div{
-		grid-template-columns: 1/2;
-		grid-template-rows: 2/3;
+		grid-column: 1/2;
+		grid-row: 2/3;
 		width: 100%;
 	}
 
@@ -148,12 +148,12 @@
 		grid-row: 1/4;
 	}
 
-	#directory:div.cards{
-		display:grid;
-		width:100%;
+	#directory .cards{
+		grid-column: 3/5;
+		width:50%;
 		
 	}
 
-	#directory:section{
+	#directory section{
 		padding: 15px;
 	}
