--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -157,7 +157,7 @@
 	#directory section{
 		padding: 15px;
 	}
-	div.cards{
+	.grid.cards{
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
 		grid-gap: 10px;
