--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,7 +1,8 @@
 @media only screen and (min-width: 1024px) {
 	main {
 		display: grid;
-		grid-template-columns: auto auto auto auto;
+		grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+
 		grid-template-rows: auto auto auto;
 		margin-top: 5%;
 		margin-bottom: 5%; 
