--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -234,6 +234,7 @@ main > div {
 
 #events{
     width:100%;
+    height: 300px;
 }
 
 #newshere {
@@ -243,6 +244,7 @@ main > div {
 
 #whatshappening {
     width: 100%;
+    height:auto;
     margin: 10px auto;
 }
 
@@ -254,9 +256,7 @@ main > div {
     width:100%;
     margin: 0 auto;
 }
-.join{
 
-}
 
 /* Footer stuff */
 
