--- a/final/styles/large.css
+++ b/final/styles/large.css
@@ -1,10 +1,13 @@
 @media only screen and (min-width: 1000px) {
-    nav{
+    header {
+        grid-template-columns: auto auto;
+    }
+
+    nav {
         align-self: end;
     }
 
     nav ul {
-        display: flex;
         flex-direction: row;
         width: 100%;
         position: relative;
@@ -15,5 +18,26 @@
         column-gap: 2em;
         padding-top: 0;
         padding-bottom: 0;
-      }
+        font-size: .7em;
+    }
+
+
+    nav li {
+
+        color: var(--color-heading-text);
+    }
+
+    nav a {
+        color: var(--color-heading-text);
+    }
+
+    nav a:visited {
+        color: var(--color-heading-text);
+    }
+
+
+
+    .current-page {
+        color: white;
+    }
 }
